PA3/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error '{' feature_list '}' ';'

    7 feature_list: /* empty */
    8             | feature_list feature_attr_method ';'
    9             | feature_list error ';'

   10 feature_attr_method: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11                    | OBJECTID ':' TYPEID init_expr

   12 formal_list: /* empty */
   13            | formal_single
   14            | formal_list ',' formal_single

   15 formal_single: OBJECTID ':' TYPEID

   16 expr: LET let_expr
   17     | OBJECTID ASSIGN expr
   18     | NOT expr
   19     | expr '=' expr
   20     | expr '<' expr
   21     | expr LE expr
   22     | expr '+' expr
   23     | expr '-' expr
   24     | expr '*' expr
   25     | expr '/' expr
   26     | ISVOID expr
   27     | '~' expr
   28     | expr '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr '.' OBJECTID '(' actual_exprs ')'
   30     | term_expr

   31 let_expr: OBJECTID ':' TYPEID init_expr IN expr
   32         | OBJECTID ':' TYPEID init_expr ',' let_expr
   33         | error ',' let_expr
   34         | error IN expr

   35 term_expr: STR_CONST
   36          | BOOL_CONST
   37          | INT_CONST
   38          | OBJECTID
   39          | NEW TYPEID
   40          | OBJECTID '(' actual_exprs ')'
   41          | '(' expr ')'
   42          | IF expr THEN expr ELSE expr FI
   43          | WHILE expr LOOP expr POOL
   44          | '{' block_exprs '}'
   45          | CASE expr OF cases ESAC

   46 cases: case ';'
   47      | cases case ';'

   48 case: OBJECTID ':' TYPEID DARROW expr

   49 init_expr: /* empty */
   50          | ASSIGN expr

   51 block_exprs: expr ';'
   52            | block_exprs expr ';'
   53            | error ';'
   54            | block_exprs error ';'

   55 actual_exprs: /* empty */
   56             | expr
   57             | actual_exprs ',' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 28 29 40 41
')' (41) 10 28 29 40 41
'*' (42) 24
'+' (43) 22
',' (44) 14 32 33 57
'-' (45) 23
'.' (46) 28 29
'/' (47) 25
':' (58) 10 11 15 31 32 48
';' (59) 4 5 6 8 9 46 47 51 52 53 54
'<' (60) 20
'=' (61) 19
'@' (64) 28
'{' (123) 4 5 6 10 44
'}' (125) 4 5 6 10 44
'~' (126) 27
error (256) 6 9 33 34 53 54
CLASS (258) 4 5
ELSE (259) 42
FI (260) 42
IF (261) 42
IN (262) 31 34
INHERITS (263) 5
LET (264) 16
LOOP (265) 43
POOL (266) 43
THEN (267) 42
WHILE (268) 43
CASE (269) 45
ESAC (270) 45
OF (271) 45
DARROW (272) 48
NEW (273) 39
ISVOID (274) 26
STR_CONST (275) 35
INT_CONST (276) 37
BOOL_CONST (277) 36
TYPEID (278) 4 5 10 11 15 28 31 32 39 48
OBJECTID (279) 10 11 15 17 28 29 31 32 38 40 48
ASSIGN (280) 17 50
NOT (281) 18
LE (282) 21
ERROR (283)
LET_IN_EXPR (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6, on right: 2 3
feature_list (50)
    on left: 7 8 9, on right: 4 5 6 8 9
feature_attr_method (51)
    on left: 10 11, on right: 8
formal_list (52)
    on left: 12 13 14, on right: 10 14
formal_single (53)
    on left: 15, on right: 13 14
expr (54)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right:
    10 17 18 19 20 21 22 23 24 25 26 27 28 29 31 34 41 42 43 45 48
    50 51 52 56 57
let_expr (55)
    on left: 31 32 33 34, on right: 16 32 33
term_expr (56)
    on left: 35 36 37 38 39 40 41 42 43 44 45, on right: 30
cases (57)
    on left: 46 47, on right: 45 47
case (58)
    on left: 48, on right: 46 47
init_expr (59)
    on left: 49 50, on right: 11 31 32
block_exprs (60)
    on left: 51 52 53 54, on right: 44 52 54
actual_exprs (61)
    on left: 55 56 57, on right: 28 29 40 57


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error . '{' feature_list '}' ';'

    '{'  shift, and go to state 6


state 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    6 class: error '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 10


state 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 10

    6 class: error '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature_attr_method ';'
    9             | feature_list . error ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 15

    feature_attr_method  go to state 16


state 11

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 17


state 12

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 18


state 13

    9 feature_list: feature_list error . ';'

    ';'  shift, and go to state 19


state 14

   10 feature_attr_method: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11                    | OBJECTID . ':' TYPEID init_expr

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


state 15

    6 class: error '{' feature_list '}' . ';'

    ';'  shift, and go to state 22


state 16

    8 feature_list: feature_list feature_attr_method . ';'

    ';'  shift, and go to state 23


state 17

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 24


state 18

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature_attr_method ';'
    9             | feature_list . error ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 25

    feature_attr_method  go to state 16


state 19

    9 feature_list: feature_list error ';' .

    $default  reduce using rule 9 (feature_list)


state 20

   10 feature_attr_method: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 12 (formal_list)

    formal_list    go to state 27
    formal_single  go to state 28


state 21

   11 feature_attr_method: OBJECTID ':' . TYPEID init_expr

    TYPEID  shift, and go to state 29


state 22

    6 class: error '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 23

    8 feature_list: feature_list feature_attr_method ';' .

    $default  reduce using rule 8 (feature_list)


state 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 30


state 25

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


state 26

   15 formal_single: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


state 27

   10 feature_attr_method: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   14 formal_list: formal_list . ',' formal_single

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


state 28

   13 formal_list: formal_single .

    $default  reduce using rule 13 (formal_list)


state 29

   11 feature_attr_method: OBJECTID ':' TYPEID . init_expr

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 49 (init_expr)

    init_expr  go to state 36


state 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature_attr_method ';'
    9             | feature_list . error ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 37

    feature_attr_method  go to state 16


state 31

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 32

   15 formal_single: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


state 33

   10 feature_attr_method: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 39


state 34

   14 formal_list: formal_list ',' . formal_single

    OBJECTID  shift, and go to state 26

    formal_single  go to state 40


state 35

   50 init_expr: ASSIGN . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 55
    term_expr  go to state 56


state 36

   11 feature_attr_method: OBJECTID ':' TYPEID init_expr .

    $default  reduce using rule 11 (feature_attr_method)


state 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 57


state 38

   15 formal_single: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal_single)


state 39

   10 feature_attr_method: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 58


state 40

   14 formal_list: formal_list ',' formal_single .

    $default  reduce using rule 14 (formal_list)


state 41

   42 term_expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 59
    term_expr  go to state 56


state 42

   16 expr: LET . let_expr

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 61

    let_expr  go to state 62


state 43

   43 term_expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 63
    term_expr  go to state 56


state 44

   45 term_expr: CASE . expr OF cases ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 64
    term_expr  go to state 56


state 45

   39 term_expr: NEW . TYPEID

    TYPEID  shift, and go to state 65


state 46

   26 expr: ISVOID . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 66
    term_expr  go to state 56


state 47

   35 term_expr: STR_CONST .

    $default  reduce using rule 35 (term_expr)


state 48

   37 term_expr: INT_CONST .

    $default  reduce using rule 37 (term_expr)


state 49

   36 term_expr: BOOL_CONST .

    $default  reduce using rule 36 (term_expr)


state 50

   17 expr: OBJECTID . ASSIGN expr
   38 term_expr: OBJECTID .
   40          | OBJECTID . '(' actual_exprs ')'

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 38 (term_expr)


state 51

   18 expr: NOT . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 69
    term_expr  go to state 56


state 52

   27 expr: '~' . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 70
    term_expr  go to state 56


state 53

   44 term_expr: '{' . block_exprs '}'

    error       shift, and go to state 71
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr         go to state 72
    term_expr    go to state 56
    block_exprs  go to state 73


state 54

   41 term_expr: '(' . expr ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 74
    term_expr  go to state 56


state 55

   19 expr: expr . '=' expr
   20     | expr . '<' expr
   21     | expr . LE expr
   22     | expr . '+' expr
   23     | expr . '-' expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr . '.' OBJECTID '(' actual_exprs ')'
   50 init_expr: ASSIGN expr .

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 50 (init_expr)


state 56

   30 expr: term_expr .

    $default  reduce using rule 30 (expr)


state 57

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 58

   10 feature_attr_method: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 84


state 59

   19 expr: expr . '=' expr
   20     | expr . '<' expr
   21     | expr . LE expr
   22     | expr . '+' expr
   23     | expr . '-' expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr . '.' OBJECTID '(' actual_exprs ')'
   42 term_expr: IF expr . THEN expr ELSE expr FI

    THEN  shift, and go to state 85
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 60

   33 let_expr: error . ',' let_expr
   34         | error . IN expr

    IN   shift, and go to state 86
    ','  shift, and go to state 87


state 61

   31 let_expr: OBJECTID . ':' TYPEID init_expr IN expr
   32         | OBJECTID . ':' TYPEID init_expr ',' let_expr

    ':'  shift, and go to state 88


state 62

   16 expr: LET let_expr .

    $default  reduce using rule 16 (expr)


state 63

   19 expr: expr . '=' expr
   20     | expr . '<' expr
   21     | expr . LE expr
   22     | expr . '+' expr
   23     | expr . '-' expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr . '.' OBJECTID '(' actual_exprs ')'
   43 term_expr: WHILE expr . LOOP expr POOL

    LOOP  shift, and go to state 89
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 64

   19 expr: expr . '=' expr
   20     | expr . '<' expr
   21     | expr . LE expr
   22     | expr . '+' expr
   23     | expr . '-' expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr . '.' OBJECTID '(' actual_exprs ')'
   45 term_expr: CASE expr . OF cases ESAC

    OF   shift, and go to state 90
    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83


state 65

   39 term_expr: NEW TYPEID .

    $default  reduce using rule 39 (term_expr)


state 66

   19 expr: expr . '=' expr
   20     | expr . '<' expr
   21     | expr . LE expr
   22     | expr . '+' expr
   23     | expr . '-' expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | ISVOID expr .
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr . '.' OBJECTID '(' actual_exprs ')'

    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 26 (expr)


state 67

   17 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr       go to state 91
    term_expr  go to state 56


state 68

   40 term_expr: OBJECTID '(' . actual_exprs ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    $default  reduce using rule 55 (actual_exprs)

    expr          go to state 92
    term_expr     go to state 56
    actual_exprs  go to state 93


state 69

   18 expr: NOT expr .
   19     | expr . '=' expr
   20     | expr . '<' expr
   21     | expr . LE expr
   22     | expr . '+' expr
   23     | expr . '-' expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr . '.' OBJECTID '(' actual_exprs ')'

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 18 (expr)


state 70

   19 expr: expr . '=' expr
   20     | expr . '<' expr
   21     | expr . LE expr
   22     | expr . '+' expr
   23     | expr . '-' expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   27     | '~' expr .
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_exprs ')'
   29     | expr . '.' OBJECTID '(' actual_exprs ')'

    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 27 (expr)


state 71

   53 block_exprs: error . ';'

    ';'  shift, and go to state 94


state 72
